# meeting-meter

./: AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_PLAN.md  GEMINI.md  README.md
.github/workflows/: release.yml
src/: calculator.rs  cli.rs  config.rs  helpers.rs  main.rs  models.rs  storage.rs  time_parser.rs
src/commands/: config.rs  history.rs  log.rs  mod.rs  report.rs  start.rs
src/ui/: live.rs
