[package]
name = "meeting-meter"
version = "0.2.7"
edition = "2024"
authors = ["Josh Spratt <jaspratt42@gmail.com>"]
description = "A CLI tool to calculate the cost of meetings"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
directories = "5.0"
uuid = { version = "1.11", features = ["v4"] }
humantime = "2.3.0"
regex = "1.12.2"
lazy_static = "1.5.0"

[package.metadata.dist]
cargo-dist-version = "0.10.0"
build-modes = ["release"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

